Revert "SSL"
This reverts commit c630fce4316bfd434d5a24e98c13a1330c9b8592.