@@ -20,6 +20,7 @@ import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import org.apache.pulsar.client.api.ClientBuilder;
@@ -31,9 +32,6 @@ import org.mockito.InOrder;
 import org.springframework.boot.autoconfigure.pulsar.PulsarProperties.Client;
 import org.springframework.pulsar.core.PulsarClientBuilderCustomizer;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.assertArg;
-import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
@@ -46,6 +44,30 @@ import static org.mockito.Mockito.mock;
 class PulsarClientBuilderConfigurerTests {
 
 	@Test
+	void singleCustomizerIsApplied() {
+		PulsarClientBuilderCustomizer customizer = mock(PulsarClientBuilderCustomizer.class);
+		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(new PulsarProperties(),
+				List.of(customizer));
+		ClientBuilder clientBuilder = mock(ClientBuilder.class);
+		configurer.configure(clientBuilder);
+		then(customizer).should().customize(clientBuilder);
+	}
+
+	@Test
+	void multipleCustomizersAreAppliedInOrder() {
+		PulsarClientBuilderCustomizer customizer1 = mock(PulsarClientBuilderCustomizer.class);
+		PulsarClientBuilderCustomizer customizer2 = mock(PulsarClientBuilderCustomizer.class);
+		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(new PulsarProperties(),
+				List.of(customizer2, customizer1));
+		ClientBuilder clientBuilder = mock(ClientBuilder.class);
+		configurer.configure(clientBuilder);
+		InOrder inOrder = inOrder(customizer1, customizer2);
+		inOrder.verify(customizer2).customize(clientBuilder);
+		inOrder.verify(customizer1).customize(clientBuilder);
+	}
+
+	@SuppressWarnings("deprecation")
+	@Test
 	void standardPropertiesAreApplied() {
 		PulsarProperties pulsarProps = new PulsarProperties();
 		Client clientProps = pulsarProps.getClient();
@@ -53,87 +75,67 @@ class PulsarClientBuilderConfigurerTests {
 		clientProps.setOperationTimeout(Duration.ofSeconds(1));
 		clientProps.setLookupTimeout(Duration.ofSeconds(2));
 		clientProps.setConnectionTimeout(Duration.ofSeconds(12));
+
 		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(pulsarProps,
-				Collections.emptyList(), mock(ClientBuilderSslConfigurer.class));
+				Collections.emptyList());
 		ClientBuilder clientBuilder = mock(ClientBuilder.class);
 		configurer.configure(clientBuilder);
+
 		then(clientBuilder).should().serviceUrl(clientProps.getServiceUrl());
 		then(clientBuilder).should().operationTimeout(1000, TimeUnit.MILLISECONDS);
 		then(clientBuilder).should().lookupTimeout(2000, TimeUnit.MILLISECONDS);
+		then(clientBuilder).should().enableTls(true);
+		then(clientBuilder).should().enableTlsHostnameVerification(true);
+		then(clientBuilder).should().tlsTrustCertsFilePath("my-trust-certs-file-path");
+		then(clientBuilder).should().tlsCertificateFilePath("my-certificate-file-path");
+		then(clientBuilder).should().tlsKeyFilePath("my-key-file-path");
+		then(clientBuilder).should().allowTlsInsecureConnection(true);
+		then(clientBuilder).should().useKeyStoreTls(true);
+		then(clientBuilder).should().sslProvider("my-ssl-provider");
+		then(clientBuilder).should().tlsTrustStoreType("my-trust-store-type");
+		then(clientBuilder).should().tlsTrustStorePath("my-trust-store-path");
+		then(clientBuilder).should().tlsTrustStorePassword("my-trust-store-password");
+		then(clientBuilder).should().tlsCiphers(Set.of("my-tls-cipher"));
+		then(clientBuilder).should().tlsProtocols(Set.of("my-tls-protocol"));
 		then(clientBuilder).should().connectionTimeout(12000, TimeUnit.MILLISECONDS);
 	}
 
 	@Test
-	void authenticationIsApplied() throws UnsupportedAuthenticationException {
-		String authPluginClassName = "org.apache.pulsar.client.impl.auth.AuthenticationToken";
-		String authToken = "1234";
-		String authParamsStr = "{\"token\":\"1234\"}";
+	void customizerAppliedAfterProperties() {
 		PulsarProperties pulsarProps = new PulsarProperties();
 		Client clientProps = pulsarProps.getClient();
-		clientProps.setAuthPluginClassName(authPluginClassName);
-		clientProps.setAuthentication(Map.of("token", authToken));
-		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(pulsarProps,
-				Collections.emptyList(), mock(ClientBuilderSslConfigurer.class));
-		ClientBuilder clientBuilder = mock(ClientBuilder.class);
-		configurer.configure(clientBuilder);
-		then(clientBuilder).should().authentication(authPluginClassName, authParamsStr);
-	}
+		clientProps.setServiceUrl("foo");
 
-	@Test
-	void sslConfigurerIsApplied() {
-		PulsarProperties pulsarProps = new PulsarProperties();
-		ClientBuilderSslConfigurer sslConfigurer = mock(ClientBuilderSslConfigurer.class);
-		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(pulsarProps,
-				Collections.emptyList(), sslConfigurer);
+		PulsarClientBuilderCustomizer customizer = (clientBuilder) -> clientBuilder.serviceUrl("bar");
+		PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(pulsarProps, List.of(customizer));
 		ClientBuilder clientBuilder = mock(ClientBuilder.class);
 		configurer.configure(clientBuilder);
-		then(sslConfigurer).should().applySsl(assertArg((sslSettings) -> {
-			assertThat(sslSettings).isInstanceOf(PulsarClientBuilderSslSettings.class);
-			assertThat(sslSettings.adaptedClientBuilder()).isSameAs(clientBuilder);
-		}), same(pulsarProps.getClient().getSsl()));
+
+		InOrder inOrder = inOrder(clientBuilder);
+		inOrder.verify(clientBuilder).serviceUrl("foo");
+		inOrder.verify(clientBuilder).serviceUrl("bar");
 	}
 
 	@Nested
-	class CustomizerTests {
+	class AuthenticationProperties {
+
+		private final String authPluginClassName = "org.apache.pulsar.client.impl.auth.AuthenticationToken";
+
+		private final String authParamsStr = "{\"token\":\"1234\"}";
+
+		private final String authToken = "1234";
 
 		@Test
-		void singleCustomizerIsApplied() {
-			PulsarClientBuilderCustomizer customizer = mock(PulsarClientBuilderCustomizer.class);
-			PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(new PulsarProperties(),
-					List.of(customizer), mock(ClientBuilderSslConfigurer.class));
-			ClientBuilder clientBuilder = mock(ClientBuilder.class);
-			configurer.configure(clientBuilder);
-			then(customizer).should().customize(clientBuilder);
-		}
-
-		@Test
-		void multipleCustomizersAreAppliedInOrder() {
-			PulsarClientBuilderCustomizer customizer1 = mock(PulsarClientBuilderCustomizer.class);
-			PulsarClientBuilderCustomizer customizer2 = mock(PulsarClientBuilderCustomizer.class);
-			PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(new PulsarProperties(),
-					List.of(customizer2, customizer1), mock(ClientBuilderSslConfigurer.class));
-			ClientBuilder clientBuilder = mock(ClientBuilder.class);
-			configurer.configure(clientBuilder);
-			InOrder inOrder = inOrder(customizer1, customizer2);
-			inOrder.verify(customizer2).customize(clientBuilder);
-			inOrder.verify(customizer1).customize(clientBuilder);
-		}
-
-		@Test
-		void customizerAppliedAfterProperties() {
+		void usingAuthenticationMap() throws UnsupportedAuthenticationException {
 			PulsarProperties pulsarProps = new PulsarProperties();
 			Client clientProps = pulsarProps.getClient();
-			clientProps.setServiceUrl("foo");
-
-			PulsarClientBuilderCustomizer customizer = (clientBuilder) -> clientBuilder.serviceUrl("bar");
+			clientProps.setAuthPluginClassName(this.authPluginClassName);
+			clientProps.setAuthentication(Map.of("token", this.authToken));
 			PulsarClientBuilderConfigurer configurer = new PulsarClientBuilderConfigurer(pulsarProps,
-					List.of(customizer), mock(ClientBuilderSslConfigurer.class));
+					Collections.emptyList());
 			ClientBuilder clientBuilder = mock(ClientBuilder.class);
 			configurer.configure(clientBuilder);
-
-			InOrder inOrder = inOrder(clientBuilder);
-			inOrder.verify(clientBuilder).serviceUrl("foo");
-			inOrder.verify(clientBuilder).serviceUrl("bar");
+			then(clientBuilder).should().authentication(this.authPluginClassName, this.authParamsStr);
 		}
 
 	}
